[package]
name = "rspd"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full", "fs"] }
sanitize-filename = "0.6.0"
anyhow = "1.0.100"
